# hiviewdfx_hitrace

./: .gitignore  BUILD.gn  OAT.xml  README.en.md  README.md  README_zh.md  bundle.json  hisysevent.yaml  hitrace.gni  ohos.build
cmd/: BUILD.gn  hitrace_cmd.cpp  hitrace_cmd.h
cmd/config/: hitrace.cfg  hitrace_user.cfg  hitrace_userdebug.cfg
cmd/example/: hitrace_example.cpp
cmd/example/rust/: main.rs
cmd/include/: hitrace_osal.h
cmd/src/: hitrace_cmd.cpp  hitrace_osal.cpp
common/: common_define.h  hitrace_define.h  smart_fd.h
config/: BUILD.gn  hitrace.cfg  hitrace_root.cfg  hitrace_user.cfg  hitrace_utils.cfg  hitrace_utils.json  hitrace_utils_root.json  hitrace_utils_user.json
example/: BUILD.gn  hitrace_example.cpp
frameworks/hitrace_ndk/: BUILD.gn  hitrace_chain_ndk.c  hitrace_meter_ndk.c  hitrace_ndk.map
frameworks/include/: common_utils.h  dynamic_buffer.h  hitrace_meter_wrapper.h
frameworks/native/: BUILD.gn  common_utils.cpp  dynamic_buffer.cpp  hitrace_inner.h  hitracec.c  hitracechain.cpp  hitracechain_inner.h  hitracechainc.c  hitraceid.cpp
frameworks/native/c_wrapper/: BUILD.gn  hitracechain_c_wrapper.map
frameworks/native/c_wrapper/include/: hitracechain_c_wrapper.h
frameworks/native/c_wrapper/source/: hitracechain_c_wrapper.c
frameworks/trace_dump_executor/: BUILD.gn  trace_buffer_manager.cpp  trace_buffer_manager.h  trace_dump_executor.cpp  trace_dump_executor.h  trace_dump_pipe.cpp  trace_dump_pipe.h
frameworks/trace_factory/: BUILD.gn  trace_buffer_manager.cpp  trace_buffer_manager.h  trace_content.cpp  trace_content.h  trace_source_factory.cpp  trace_source_factory.h
frameworks/trace_source/: BUILD.gn  trace_buffer_manager.cpp  trace_buffer_manager.h  trace_content.cpp  trace_content.h  trace_source.cpp  trace_source.h
frameworks/tracedump_executor/: BUILD.gn  trace_dump_executor.cpp  trace_dump_executor.h  trace_dump_pipe.cpp  trace_dump_pipe.h  trace_dump_state.cpp  trace_dump_state.h  trace_dump_strategy.cpp  trace_dump_strategy.h  trace_strategy_factory.cpp  trace_strategy_factory.h
interfaces/: bundle.json
interfaces/ani/: BUILD.gn  hitracemeter_ani.cpp
interfaces/ani/ets/: @ohos.hiTraceMeter.ets  BUILD.gn  hitracemeter_ani.cpp
interfaces/cj/kits/: BUILD.gn
interfaces/cj/kits/ffi/: BUILD.gn
interfaces/ets/ani/: BUILD.gn
interfaces/js/: BUILD.gn
interfaces/js/kits/: BUILD.gn
interfaces/native/innerkits/: BUILD.gn  hitrace.map  hitrace.para  hitrace.para.dac  hitrace_option.map  libhitracechain.map
interfaces/native/innerkits/include/: hitrace_dump.h  hitrace_util.h
interfaces/native/innerkits/include/hitrace/: hitracec.h  hitracechain.h  hitracechainc.h  hitraceid.h
interfaces/native/innerkits/include/hitrace_meter/: hitrace_meter.h  hitrace_meter_c.h
interfaces/native/innerkits/include/hitrace_option/: hitrace_option.h  hitrace_option_util.h  trace_context.h
interfaces/native/innerkits/src/: hitrace_dump.cpp  hitrace_meter.cpp  hitrace_meter_c.c  hitrace_meter_wrapper.cpp  hitrace_util.cpp
interfaces/native/innerkits/src/hitrace_option/: hitrace_option.cpp  hitrace_option_util.cpp  trace_context.cpp
interfaces/native/kits/: BUILD.gn
lite/: BUILD.gn
lite/test/: BUILD.gn
test/: BUILD.gn
test/fuzztest/: BUILD.gn
test/fuzztest/common/: hitrace_fuzztest_common.h
test/fuzztest/hitracecmd_fuzzer/: hitrace_fuzzer.cpp  hitrace_fuzzer.h  project.xml
test/fuzztest/hitracedump_fuzzer/: hitracedump_fuzzer.cpp  hitracedump_fuzzer.h
test/fuzztest/hitracemeter_fuzzer/: hitracemeter_fuzzer.cpp  hitracemeter_fuzzer.h  project.xml
test/fuzztest/hitraceoption_fuzzer/: hitraceoption_fuzzer.cpp  hitraceoption_fuzzer.h  project.xml
test/scripts/: main.py  prepare.py  pytest.ini  readme.md  requirements.txt
test/scripts/testModule/: test_hitrace_cmd.py  test_hitrace_tool.py
test/systemtest/: BUILD.gn  hitrace_systemtest.cpp
test/unittest/: BUILD.gn
test/unittest/common/napi/: BUILD.gn  config.json  napi_hitracechain.test.js  napi_hitracemeter.test.js
test/unittest/common/native/: hitracec_test.cpp  hitracechainc_test.cpp  hitracechaincpp_test.cpp  hitracecpp_test.cpp
test/unittest/hitrace_chain/: hitrace_chain_ndk_test.cpp
test/unittest/hitrace_cmd/: hitrace_cmd.h  hitrace_cmd_test.cpp
test/unittest/hitrace_dump/: hitrace_async_dump_timeout_test.cpp  hitrace_async_read_timeout.cpp  hitrace_async_write_timeout.cpp  hitrace_dump_test.cpp  hitrace_util_test.cpp
test/unittest/hitrace_event/: hitrace_event_listener.cpp  hitrace_event_listener.h  hitrace_event_test.cpp
test/unittest/hitrace_meter/: hitrace_capi_test.cpp  hitrace_meter_ffi_test.cpp  hitrace_meter_ndk_test.cpp  hitrace_meter_test.cpp  hitrace_meter_test_utils.cpp  hitrace_meter_test_utils.h  hitrace_ndk_test.cpp
test/unittest/hitrace_option/: hitrace_option_test.cpp  hitrace_option_util_test.cpp  trace_context_test.cpp
test/unittest/hitrace_utils/: hitrace_ageing_test.cpp  hitrace_utils_test.cpp  trace_file_utils_test.cpp
test/unittest/resource/: ohos_test.xml  test_hitrace_utils.json  test_product_config.json
test/unittest/rust/hitrace_meter/: BUILD.gn
test/unittest/rust/hitrace_meter/c/: BUILD.gn  trace_test_util.cpp  trace_test_util.h
test/unittest/rust/hitrace_meter/src/: main.rs  trace_test.rs
test/unittest/rust/hitracechain/: BUILD.gn
test/unittest/rust/hitracechain/src/: main.rs
test/unittest/tools/: test_hitrace_converter.py
test/unittest/tools/sample/: record_trace_20250320101116@2500-814308989.sys
test/unittest/trace_dump_executor/: trace_dump_executor_test.cpp
test/unittest/trace_factory/: hitrace_factory_test.cpp
test/unittest/trace_source/: hitrace_source_test.cpp
test/unittest/tracedump_executor/: trace_dump_executor_test.cpp
test/utils/: BUILD.gn  test_utils.cpp  test_utils.h
tools/hitrace_converter/: hitrace_converter.py  parse_functions.py  zmain.py
utils/: BUILD.gn  common_utils.cpp  common_utils.h  file_ageing_utils.cpp  file_ageing_utils.h  trace_file_utils.cpp  trace_file_utils.h  trace_json_parser.cpp  trace_json_parser.h  trace_utils.cpp  trace_utils.h
(+51 files in other folders)
