# Copyright (c) 2023-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

hitrace_path = "//base/hiviewdfx/hitrace"
hitrace_cmd_path = "$hitrace_path/cmd"
hitrace_config_path = "$hitrace_path/config"
hitrace_frameworks_path = "$hitrace_path/frameworks"
hitrace_interfaces_path = "$hitrace_path/interfaces"

declare_args() {
  hitrace_support_executable_file = true
  hitrace_double_tracebuffer_size = false
  hiview_enable = false
  if (defined(global_parts_info) &&
      defined(global_parts_info.hiviewdfx_hiview)) {
    hiview_enable = true
  }
}
