# Copyright (c) 2021-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_prebuilt_etc("hitrace_tags") {
  if (build_variant == "user") {
    source = "hitrace_utils_user.json"
  } else {
    source = "hitrace_utils_root.json"
  }
  relative_install_dir = "hiview"
  output = "hitrace_utils.json"
  install_images = [
    "system",
    "updater",
  ]
  install_enable = true
  subsystem_name = "hiviewdfx"
  part_name = "hitrace"
}

ohos_prebuilt_etc("hitrace.cfg") {
  if (build_variant == "user") {
    source = "hitrace_user.cfg"
  } else {
    source = "hitrace_root.cfg"
  }
  relative_install_dir = "init"
  output = "hitrace.cfg"
  install_images = [
    "system",
    "updater",
  ]
  install_enable = true
  subsystem_name = "hiviewdfx"
  part_name = "hitrace"
}
