# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_shared_library("hitrace_ndk") {
  include_dirs = [
    "../include",
    "../../interfaces/native/innerkits/include",
  ]

  sources = [
    "../../interfaces/native/innerkits/src/hitrace_meter_c.c",
    "../native/hitracechainc.c",
    "hitrace_chain_ndk.c",
    "hitrace_meter_ndk.c",
  ]

  deps = [ "../../interfaces/native/innerkits:hitrace_meter" ]

  external_deps = [ "bounds_checking_function:libsec_static" ]
  if (defined(ohos_lite)) {
    external_deps += [ "hilog_lite:hilog_lite" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }
  version_script = "hitrace_ndk.map"
  innerapi_tags = [ "ndk" ]
  part_name = "hitrace"
  subsystem_name = "hiviewdfx"
}
