# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_source_set("hitracechain_source") {
  include_dirs = [
    "../../interfaces/native/innerkits/include",
    "//third_party/bounds_checking_function/include",
    "//base/hiviewdfx/hitrace/interfaces/native/innerkits/include/hitrace_meter",
    "//base/hiviewdfx/hitrace/frameworks/include",
  ]

  sources = [
    "//base/hiviewdfx/hitrace/interfaces/native/innerkits/src/hitrace_meter.cpp",
    "//base/hiviewdfx/hitrace/interfaces/native/innerkits/src/hitrace_meter_c.c",
    "//base/hiviewdfx/hitrace/interfaces/native/innerkits/src/hitrace_meter_wrapper.cpp",
    "hitracechain.cpp",
    "hitracechainc.c",
    "hitraceid.cpp",
  ]

  external_deps = []
  external_deps += [
    "bounds_checking_function:libsec_static",
    "init:libbegetutil",
  ]

  if (defined(ohos_lite)) {
    external_deps += [ "hilog_lite:hilog_lite" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }
  external_deps += [ "bounds_checking_function:libsec_static" ]

  part_name = "hitrace"
  subsystem_name = "hiviewdfx"
}
