# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/hiviewdfx/hitrace/hitrace.gni")
import("//build/ohos.gni")

ohos_static_library("trace_dump_executor") {
  include_dirs = [
    ".",
    "$hitrace_common_path",
    "$hitrace_frameworks_path/trace_source",
    "$hitrace_utils_path",
  ]
  sources = [ "trace_dump_executor.cpp" ]

  deps = [
    "$hitrace_frameworks_path/trace_source:trace_source",
    "$hitrace_utils_path:hitrace_common_utils",
    "$hitrace_utils_path:hitrace_file_utils",
    "$hitrace_utils_path:hitrace_json_parser",
  ]

  external_deps = [ "bounds_checking_function:libsec_shared" ]

  if (defined(ohos_lite)) {
    external_deps += [ "hilog_lite:hilog_lite" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }

  part_name = "hitrace"
  subsystem_name = "hiviewdfx"
}
