# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/hiviewdfx/hitrace/hitrace.gni")
import("//build/config/features.gni")
import("//build/test.gni")

module_output_path = "hitrace/hitrace"

ohos_systemtest("HitraceSystemTest") {
  module_out_path = module_output_path
  include_dirs = [
    "$hitrace_utils_path",
    "$hitrace_common_path",
    "$hitrace_path/test/utils",
    "$hitrace_frameworks_path/include",
    "$hitrace_interfaces_path/native/innerkits/include",
  ]
  sources = [ "hitrace_systemtest.cpp" ]
  deps = [
    "$hitrace_interfaces_path/native/innerkits:hitrace_dump",
    "$hitrace_path/test/utils:hitrace_test_utils",
    "$hitrace_utils_path:hitrace_common_utils",
    "$hitrace_utils_path:hitrace_file_utils",
  ]
  external_deps = [
    "bounds_checking_function:libsec_shared",
    "googletest:gtest_main",
  ]
}
